src/style.css
@import url('https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap');


html,
body {
  margin: 0px;
  min-height: 100vh;
  position:relative;
  background-color: rgb(15, 16, 17);
  scroll-behavior: smooth;
}

#content {
  color:whitesmoke;
  font-family: 'Homemade Apple', cursive;
}

.welcome {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./homepage.jpg');
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./about.jpg');
}

.menu {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./menu.jpg');
}

.contact {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./contact.jpg');
}

.info {
  max-width: 700px;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
}

header {
  text-align: center;
}

h1 {
  padding: 2em;
  font-size: 3em;
}

.about h1 {
  padding: 1em;
}

.menu h1 {
  padding: 2.5em 1em .5em 1em;
  font-size: 2em;
}

header p {
  font-size:2rem;
}

.container {
  height:100vh;
  text-align: center;
  margin:0 auto;
  background-repeat:no-repeat;
  background-size:cover;
  background-position: center 20%;
  text-shadow: 1px 1px .75px black;
}

.container h1 {
  max-width: 700px;
  margin:0 auto;
}

nav {
  max-width: 80%;
  height: 50px;
  margin: 0 auto;
  position: absolute;
  left: 0;
  right: 0;
  display:flex;
  align-items:center;
  background-color: rgba(42, 44, 46, 0.671);
  border-radius: 5px;
}

nav button {
  height: 100%;
  padding: 0 1em;
  display:flex;
  align-items:center;
  font-size:1.3em;
  background:none;
  border:none;
  color: whitesmoke;;
}

nav button:hover {
  color:rgba(246, 248, 253, 0.801);
  transition: all 0.2s ease;
  cursor:pointer;
}

.active {
  border-radius:5px;
  background-color:rgba(255,255,255,0.2);
}

.menu-group {
  display: grid;
  grid-template-columns: 1fr;
  max-height: 600px;
  gap: 1em;
  padding: 1.5em 0;
}

.menu-item {
  display: flex;
  flex-direction: column;
}

.menu-item-text {
  flex-grow: 1;
}

.menu-item-heading {
  display: flex;
  justify-content: center;
  margin: 0;
}

.menu-item-name {
  margin-right: 1.5em;
}

.menu-item-desc {
  line-height: 1;
}

footer {
  height:7vh;
  color:whitesmoke;
  display:flex;
  align-items:center;
  justify-content:center;
  position:absolute;
  max-width:100%;
  bottom:0;
  left:0;
  right:0;
  text-align:center;
  padding: 0 1em;
  box-sizing:border-box;
  text-shadow: 1px 1px .75px black;
}



@media (max-width:580px) {
  nav {
    width: 100%;
    justify-content:center;
  }

  nav button {
    font-size: 1rem;
  }

  .about {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
  }
}

@media (max-width:440px) {
  nav button {
    font-size: 0.85rem;
  }

  .container {
    font-size: 15px;
  }


}

